@@ -67,9 +67,24 @@ class CaveatQueryServiceTest {
         when(ccdDataStoreAPIConfiguration.getHost()).thenReturn("http://localhost");
         when(ccdDataStoreAPIConfiguration.getCaseMatchingPath()).thenReturn("/path");
 
-        CaveatData caveatData = CaveatData.builder()
-                .deceasedSurname("Smith")
-                .build();
+
+        CaveatData reliantData = CaveatData.builder().deceasedSurname("Reliant").build();
+        List<ReturnedCaveatDetails> firstPage = new ImmutableList.Builder<ReturnedCaveatDetails>().add(
+                new ReturnedCaveatDetails(reliantData, LAST_MODIFIED, DRAFT, 1L)).build();
+        CaveatData robinData = CaveatData.builder().deceasedSurname("Robin").build();
+        List<ReturnedCaveatDetails> secondPage = new ImmutableList.Builder<ReturnedCaveatDetails>().add(
+                new ReturnedCaveatDetails(robinData, LAST_MODIFIED, DRAFT, 1L)).build();
+
+        ReturnedCaveats page1 = new ReturnedCaveats(firstPage, 2);
+        ReturnedCaveats page2 = new ReturnedCaveats(secondPage, 2);
+        ReturnedCaveats emptyPage = new ReturnedCaveats(ImmutableList.of(), 2);
+
+        when(restTemplate.postForObject(any(), any(), any()))
+                .thenReturn(page1)
+                .thenReturn(page2)
+                .thenReturn(emptyPage);
+
+        CaveatData caveatData = CaveatData.builder().deceasedSurname("Smith").build();
         List<ReturnedCaveatDetails> caveatList = new ImmutableList.Builder<ReturnedCaveatDetails>().add(
                 new ReturnedCaveatDetails(caveatData, LAST_MODIFIED, DRAFT, 1L))
                 .build();
@@ -119,7 +134,9 @@ class CaveatQueryServiceTest {
     @Test
     void findCaveatWithExpiryDate() {
         List<ReturnedCaveatDetails> result = caveatQueryService.findCaveatExpiredCases("2023-10-01");
-        assertEquals("Smith", result.getFirst().getData().getDeceasedSurname());
+        assertEquals(2, result.size());
+        assertEquals("Reliant", result.get(0).getData().getDeceasedSurname());
+        assertEquals("Robin", result.get(1).getData().getDeceasedSurname());
     }
 
 }
